# gigaset-online-directory

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.rst  TODO.md  local.json.example  pyproject.toml  requirements.txt  run.py  settings.example.py  setup.py
.github/workflows/: python-package.yml
gigaset/: __init__.py  views.py
gigaset/backends/: dasoertliche.py  dastelefonbuch.py  local.py
gigaset/templates/: index.html
